Refactor index.html and style.css: remove header, update body structure, and add utility classes for layout and styling

--- a/files/index.html
+++ b/files/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-green-500 text-white">
-    Hello world!
-  </h1>
+
+<body class="min-h-screen grid place-content-center">
+  <div class="bg-emerald-500 w-50 h-50 rounded-full shadow-2xl">
+
+  </div>
 </body>
+
 </html>
