--- a/files/index.html
+++ b/files/index.html
@@ -7,8 +7,13 @@
   <link href="./style.css" rel="stylesheet">
 </head>
 
-<body class="min-h-screen grid place-content-center">
-  <div class="bg-emerald-500 w-50 h-50 rounded-full shadow-2xl">
+<body class="min-h-screen grid place-content-center radial-blue">
+  <div class="bg-emerald-500 w-50 h-50 rounded-full shadow-2xl grid place-content-center">
+    <div class="bg-teal-200 w-32 h-32 rounded-full grid place-content-center">
+      <div class="bg-red-700 w-16 h-16 rounded-full">
+
+      </div>
+    </div>
 
   </div>
 </body>
