--- a/files/index.html
+++ b/files/index.html
@@ -5,17 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
+  <title>Acme Rockets</title>
 </head>
 
-<body class="min-h-screen grid place-content-center radial-blue">
-  <div class="bg-emerald-500 w-50 h-50 rounded-full shadow-2xl grid place-content-center">
-    <div class="bg-teal-200 w-32 h-32 rounded-full grid place-content-center">
-      <div class="bg-red-700 w-16 h-16 rounded-full">
-
+<body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
+  <header class="bg-teal-700 text-white sticky top-0 z-10">
+    <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+      <h1 class="text-3xl font-medium">
+        <a href="#hero">Acme Rockets 🚀</a>
+      </h1>
+      <div>
+        <button id="mobile-open-button" class="text-3xl sm:hidden focus:outline-none">&#9776;</button>
       </div>
-    </div>
-
-  </div>
+    </section>
+  </header>
+</body>
 </body>
 
 </html>
