--- a/files/index.html
+++ b/files/index.html
@@ -17,6 +17,12 @@
       <div>
         <button id="mobile-open-button" class="text-3xl sm:hidden focus:outline-none">&#9776;</button>
       </div>
+
+      <nav class="hidden sm:block space-x-8 text-xl" aria-label="main">
+        <a href="#rockets" class="hover:opacity-90">Rockets</a>
+        <a href="#testimonials" class="hover:opacity-90">Testimonials</a>
+        <a href="#contact" class="hover:opacity-90">Contact us</a>
+      </nav>
     </section>
   </header>
 </body>
