--- a/files/index.html
+++ b/files/index.html
@@ -25,6 +25,25 @@
       </nav>
     </section>
   </header>
+
+  <main class="max-w-4xl mx-auto">
+    <section id="hero" class=" flex flex-col-reverse justify-center sm:flex-row px-6 items-center gap-8 mb-12 py-5">
+      <article class="sm:w-1/2">
+        <h2 class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900 dark:text-white">We
+          are dedicated to <span class="text-indigo-700 dark:text-indigo-300">pioneering advancements in rocket</span>
+          technology...</h2>
+        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">We're building
+          rockets for the next century today. From the moons to Mars, Jupiter and beyond...</p>
+        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">Think Acme
+          Rockets.</p>
+      </article>
+      <img src="/img/rocketdab.png" alt="rocket dab" class="w-1/2">
+    </section>
+
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+    
+  </main>
 </body>
 </body>
 
