Enhance index.html and style.css: add sections for rockets, testimonials, and contact, and update margin and padding utility classes

--- a/files/index.html
+++ b/files/index.html
@@ -42,7 +42,25 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    
+    <section id="rockets" class="p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Our Rockets
+      </h2>
+    </section>
+
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+    <section id="testimonials" class="p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Testimonials
+      </h2>
+    </section>
+
+    <hr class="mx-auto bg-black dark:bg-white w-1/2">
+
+    <section id="ontact class=" p-6 my-12">
+      <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Contact us
+      </h2>
+    </section>
+
   </main>
 </body>
 </body>
