Enhance index.html and style.css: add rocket section with list and styling improvements

--- a/files/index.html
+++ b/files/index.html
@@ -45,6 +45,16 @@
     <section id="rockets" class="p-6 my-12">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Our Rockets
       </h2>
+
+      <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
+        <li
+          class="w-2/3 sm:w-5/6 flex flex-col items-center border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
+          <img src="/img/rocketman.png" alt="rocket man" class="w-1/2 mb-6">
+          <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
+
+          </h3>
+        </li>
+      </ul>
     </section>
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
