Enhance index.html: add new rocket items with images and descriptions to the rockets section

--- a/files/index.html
+++ b/files/index.html
@@ -60,6 +60,32 @@
             Affordable Exploration
           </p>
         </li>
+        <li
+          class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
+          <img src="/img/rocketride.png" alt="rocket ride" class="w-1/2 mb-6">
+          <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
+            Adventurer
+          </h3>
+          <p class=" hidden sm:block text-3xl mt-2 text-center text-slate-500 dark:text-slate-400">
+            $$
+          </p>
+          <p class="sm:hidden text-2xl mt-2 text-center text-slate-500 dark:text-slate-400">
+            Best Selling Rocket!
+          </p>
+        </li>
+        <li
+          class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
+          <img src="/img/rocketlaunch.png" alt="rocket launch" class="w-1/2 mb-6">
+          <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
+            Infinity
+          </h3>
+          <p class=" hidden sm:block text-3xl mt-2 text-center text-slate-500 dark:text-slate-400">
+            $$$
+          </p>
+          <p class="sm:hidden text-2xl mt-2 text-center text-slate-500 dark:text-slate-400">
+            Luxury Space Travel
+          </p>
+        </li>
       </ul>
     </section>
 
