--- a/files/index.html
+++ b/files/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+  </style>
   <title>Acme Rockets</title>
 </head>
 
@@ -27,7 +30,8 @@
   </header>
 
   <main class="max-w-4xl mx-auto">
-    <section id="hero" class=" flex flex-col-reverse justify-center sm:flex-row px-6 items-center gap-8 mb-12 py-5">
+    <section id="hero"
+      class=" flex flex-col-reverse justify-center sm:flex-row px-6 items-center gap-8 mb-12 py-5 scroll-mt-40">
       <article class="sm:w-1/2">
         <h2 class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900 dark:text-white">We
           are dedicated to <span class="text-indigo-700 dark:text-indigo-300">pioneering advancements in rocket</span>
@@ -42,7 +46,7 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="rockets" class="p-6 my-12">
+    <section id="rockets" class="p-6 my-12 scroll-mt-20">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Our Rockets
       </h2>
 
@@ -94,11 +98,23 @@
     <section id="testimonials" class="p-6 my-12">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Testimonials
       </h2>
+
+      <figure class="my-12">
+        <blockquote class="bg-teal-600 dark:bg-black pl-14-pr-8 py-12 rounded-3xl relative">
+          <p
+            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:translate-x-2 after:translate-y-2">
+            acme has always been there for me. Their explorer rocket arrived on time and in perfect condition.
+            Life-long customer here! A++ shopping experience!</p>
+
+        </blockquote>
+        <figcaption class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400">&#8212; Wile
+          E. Coyote, Genius </figcaption>
+      </figure>
     </section>
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="ontact class=" p-6 my-12">
+    <section id="contact class=" p-6 my-12">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Contact us
       </h2>
     </section>
