--- a/files/index.html
+++ b/files/index.html
@@ -103,13 +103,35 @@
       <figure class="my-12">
         <blockquote class="bg-teal-600 dark:bg-black pl-14-pr-8 py-12 rounded-3xl relative">
           <p
-            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after:translate-x-2 after:translate-y-2">
+            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after-translate-x-2 after:translate-y-2">
             acme has always been there for me. Their explorer rocket arrived on time and in perfect condition.
-            Life-long customer here! A++ shopping experience!</p>
-
+            Life-long customer here! A++ shopping experience!
+          </p>
         </blockquote>
         <figcaption class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400">&#8212; Wile
           E. Coyote, Genius </figcaption>
+      </figure>
+      <figure class="my-12">
+        <blockquote class="bg-teal-600 dark:bg-black pl-14-pr-8 py-12 rounded-3xl relative">
+          <p
+            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after-translate-x-2 after:translate-y-2">
+            The Adventurer rocket was amazing. My trip to Mars was smooth and comfortable.
+            I’ll be booking again! Five stars from me!
+          </p>
+        </blockquote>
+        <figcaption class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400">&#8212; Buzz
+          Lightyear, Galactic Traveler</figcaption>
+      </figure>
+      <figure class="my-12">
+        <blockquote class="bg-teal-600 dark:bg-black pl-14-pr-8 py-12 rounded-3xl relative">
+          <p
+            class="text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after-translate-x-2 after:translate-y-2">
+            Infinity made my dream come true. The views were breathtaking and the crew was fantastic.
+            I recommend Acme to everyone! Truly unforgettable!
+          </p>
+        </blockquote>
+        <figcaption class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400">&#8212; Jane
+          Starfield, Luxury Tourist</figcaption>
       </figure>
     </section>
 
