--- a/files/index.html
+++ b/files/index.html
@@ -96,7 +96,7 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="testimonials" class="p-6 my-12">
+    <section id="testimonials" class="p-6 my-12 scroll-mt-20">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Testimonials
       </h2>
 
@@ -137,13 +137,49 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="contact class=" p-6 my-12">
+    <section id="contact" class="p-6 my-12">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Contact us
       </h2>
+
+      <form action="#" class="max-4xl mx-auto text-2xl sm:text-3xl flex flex-col items-left gap-4 px-5">
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" required minlength="3" maxlength="60" placeholder="Enter subject"
+          class="w-full bg-white text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none">
+        <label for="message">Message:</label>
+        <textarea name="message" id="message" required cols="30" rows="10" placeholder="Enter your message"
+          class="w-full bg-white text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none"></textarea>
+
+        <button type="submit"
+          class="bg-teal-700 hover:bg-teal-600 active:bg-teal-500 text-white p-3 w-48 rounded-xl border border-solid border-slate-900 dark:border-none">Submit</button>
+      </form>
     </section>
 
   </main>
-</body>
+
+  <footer id="footer" class="bg-teal-700 text-white text-xl">
+    <section class="max-w-4xl mx-auto p-6 flex flex-col sm:flex-row sm:justify-between gap-4">
+      <address>
+        <h2>Acme Rocket-Powered Products, Inc.</h2>
+        555, Astro way, <br>
+        Space City, Universe 12345<br>
+        Email: <a href="mailto:info@acme.com">info@acme.com</a><br>
+        Phone: <a href="tel:+1234567890">+1 (234) 567-890</a>
+      </address>
+
+      <nav class="hidden md:flex flex-col gap-2" aria-label="footer">
+        <a href="#hero" class="hover:opacity-90">Home</a>
+        <a href="#rockets" class="hover:opacity-90">Rockets</a>
+        <a href="#testimonials" class="hover:opacity-90">Testimonials</a>
+        <a href="#contact" class="hover:opacity-90">Contact us</a>
+      </nav>
+      <div class="flex flex-col sm:gap-2">
+        <p class="text-right">Copyright &copy; <span id="year">2024</span> Acme Corporation.</p>
+        <p class="text-right">
+          All rights reserved.
+        </p>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
