--- a/files/index.html
+++ b/files/index.html
@@ -19,10 +19,10 @@
         <a href="#hero">Acme Rockets 🚀</a>
       </h1>
       <div>
-        <button id="mobile-open-button" class="text-3xl sm:hidden focus:outline-none">&#9776;</button>
+        <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer">&#9776;</button>
       </div>
 
-      <nav class="hidden sm:block space-x-8 text-xl" aria-label="main">
+      <nav class="hidden md:block space-x-8 text-xl" aria-label="main">
         <a href="#rockets" class="hover:opacity-90">Rockets</a>
         <a href="#testimonials" class="hover:opacity-90">Testimonials</a>
         <a href="#contact" class="hover:opacity-90">Contact us</a>
@@ -32,7 +32,7 @@
 
   <main class="max-w-4xl mx-auto">
     <section id="hero"
-      class=" flex flex-col-reverse justify-center sm:flex-row px-6 items-center gap-8 mb-12 py-5 scroll-mt-40">
+      class=" flex flex-col-reverse justify-center sm:flex-row px-6 items-center gap-8 mb-12 py-5 scroll-mt-40 widescreen:section-min-height tallscreen:section-min-height">
       <article class="sm:w-1/2">
         <h2 class="max-w-md text-4xl font-bold text-center sm:text-5xl sm:text-left text-slate-900 dark:text-white">We
           are dedicated to <span class="text-indigo-700 dark:text-indigo-300">pioneering advancements in rocket</span>
@@ -47,7 +47,7 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="rockets" class="p-6 my-12 scroll-mt-20">
+    <section id="rockets" class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Our Rockets
       </h2>
 
@@ -96,7 +96,8 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="testimonials" class="p-6 my-12 scroll-mt-20">
+    <section id="testimonials"
+      class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Testimonials
       </h2>
 
@@ -137,7 +138,7 @@
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
 
-    <section id="contact" class="p-6 my-12">
+    <section id="contact" class="p-6 my-12 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Contact us
       </h2>
 
