--- a/files/index.html
+++ b/files/index.html
@@ -28,6 +28,17 @@
         <a href="#contact" class="hover:opacity-90">Contact us</a>
       </nav>
     </section>
+
+    <section id="mobile-menu" class="absolute top-0 bg-black w-full text-4xl flex flex-col justify-content-center">
+      <button class="text-8xl self-end px-6">&times;</button>
+      <nav class="flex flex-col min-h-screen items-center py-8" aria-label="mobile">
+        <a href="#hero" class="w-full text-center py-6 hover:opacity-90">Home</a>
+        <a href="#rockets" class="w-full text-center py-6 hover:opacity-90">Rockets</a>
+        <a href="#testimonials" class="w-full text-center py-6 hover:opacity-90">Testimonials</a>
+        <a href="#contact" class="w-full text-center py-6 hover:opacity-90">Contact us</a>
+        <a href="#footer" class="w-full text-center py-6 hover:opacity-90">Footer</a>
+      </nav>
+    </section>
   </header>
 
   <main class="max-w-4xl mx-auto">
