Refactor index.html: improve mobile menu structure and enhance navigation accessibility

--- a/files/index.html
+++ b/files/index.html
@@ -36,7 +36,7 @@
         <a href="#rockets" class="w-full text-center py-6 hover:opacity-90">Rockets</a>
         <a href="#testimonials" class="w-full text-center py-6 hover:opacity-90">Testimonials</a>
         <a href="#contact" class="w-full text-center py-6 hover:opacity-90">Contact us</a>
-        <a href="#footer" class="w-full text-center py-6 hover:opacity-90">Footer</a>
+        <a href="#footer" class="w-full text-center py-6 hover:opacity-90">Legal</a>
       </nav>
     </section>
   </header>
