fix: update branding from Acme Rockets to Astro Drive in index.html

--- a/files/index.html
+++ b/files/index.html
@@ -10,26 +10,24 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
   </style>
-  <title>Acme Rockets</title>
+  <title>Astro Drive</title>
 </head>
 
 <body class="min-h-screen bg-slate-50 dark:bg-black dark:text-white">
   <header class="bg-teal-700 text-white sticky top-0 z-10">
     <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
       <h1 class="text-3xl font-medium">
-        <a href="#hero">Acme Rockets 🚀</a>
+        <a href="#hero">Astro Drive 🚀</a>
       </h1>
       <div>
         <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer">&#9776;</button>
       </div>
-
       <nav class="hidden md:block space-x-8 text-xl" aria-label="main">
         <a href="#rockets" class="hover:opacity-90">Rockets</a>
         <a href="#testimonials" class="hover:opacity-90">Testimonials</a>
         <a href="#contact" class="hover:opacity-90">Contact us</a>
       </nav>
     </section>
-
     <section id="mobile-menu"
       class="absolute top-0 bg-black w-full text-4xl flex-col justify-content-center origin-top animate-open-menu hidden">
       <button class="text-8xl self-end px-6">&times;</button>
@@ -52,8 +50,8 @@
           technology...</h2>
         <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">We're building
           rockets for the next century today. From the moons to Mars, Jupiter and beyond...</p>
-        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">Think Acme
-          Rockets.</p>
+        <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">Think Astro Drive.
+        </p>
       </article>
       <img src="/files/img/rocketdab.png" alt="rocket dab" class="w-1/2">
     </section>
@@ -63,7 +61,6 @@
     <section id="rockets" class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Our Rockets
       </h2>
-
       <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
         <li
           class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
@@ -113,12 +110,11 @@
       class="p-6 my-12 scroll-mt-20 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Testimonials
       </h2>
-
       <figure class="my-12">
         <blockquote class="bg-teal-600 dark:bg-black pl-14-pr-8 py-12 rounded-3xl relative">
           <p
             class="px-4 text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after-translate-x-2 after:-translate-y-2">
-            acme has always been there for me. Their explorer rocket arrived on time and in perfect condition.
+            Astro Drive has always been there for me. Their Explorer rocket arrived on time and in perfect condition.
             Life-long customer here! A++ shopping experience!
           </p>
         </blockquote>
@@ -141,7 +137,7 @@
           <p
             class="px-4 text-2xl sm:text-3xl text-left mt-2 text-white dark:text-slate-400 before:content-['\201C'] before:font-serif before:absolute before:top-0 before:left-0 before:text-9xl before:text-white before:opacity-25 before:transform before:translate-x-2 before:translate-y-2 after:content-['\201D'] after:font-serif after:absolute after:-bottom-20 after:right-0 after:text-9xl after:text-white after:opacity-25 after:transform after-translate-x-2 after:-translate-y-2">
             Infinity made my dream come true. The views were breathtaking and the crew was fantastic.
-            I recommend Acme to everyone! Truly unforgettable!
+            I recommend Astro Drive to everyone! Truly unforgettable!
           </p>
         </blockquote>
         <figcaption class="italic text-xl sm:text-2xl text-right mt-2 text-slate-500 dark:text-slate-400">&#8212; Jane
@@ -154,7 +150,6 @@
     <section id="contact" class="p-6 my-12 widescreen:section-min-height tallscreen:section-min-height">
       <h2 class="text-4xl font-bold text-center sm:text-5xl mb-6 text-slate-900 dark:text-white">Contact us
       </h2>
-
       <form action="#" class="max-4xl mx-auto text-2xl sm:text-3xl flex flex-col items-left gap-4 px-5">
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject" required minlength="3" maxlength="60" placeholder="Enter subject"
@@ -162,24 +157,21 @@
         <label for="message">Message:</label>
         <textarea name="message" id="message" required cols="30" rows="10" placeholder="Enter your message"
           class="w-full bg-white text-black text-2xl sm:text-3xl p-3 rounded-xl border border-solid border-slate-900 dark:border-none"></textarea>
-
         <button type="submit"
           class="bg-teal-700 hover:bg-teal-600 active:bg-teal-500 text-white p-3 w-48 rounded-xl border border-solid border-slate-900 dark:border-none">Submit</button>
       </form>
     </section>
-
   </main>
 
   <footer id="footer" class="bg-teal-700 text-white text-xl">
     <section class="max-w-4xl mx-auto p-6 flex flex-col sm:flex-row sm:justify-between gap-4">
       <address>
-        <h2>Acme Rocket-Powered Products, Inc.</h2>
+        <h2>Astro Drive-Powered Products, Inc.</h2>
         555, Astro way, <br>
         Space City, Universe 12345<br>
-        Email: <a href="mailto:info@acme.com">info@acme.com</a><br>
+        Email: <a href="mailto:info@astrodrive.com">info@astrodrive.com</a><br>
         Phone: <a href="tel:+1234567890">+1 (234) 567-890</a>
       </address>
-
       <nav class="hidden md:flex flex-col gap-2" aria-label="footer">
         <a href="#hero" class="hover:opacity-90">Home</a>
         <a href="#rockets" class="hover:opacity-90">Rockets</a>
@@ -187,7 +179,7 @@
         <a href="#contact" class="hover:opacity-90">Contact us</a>
       </nav>
       <div class="flex flex-col sm:gap-2">
-        <p class="text-right">Copyright &copy; <span id="year">2024</span> Acme Corporation.</p>
+        <p class="text-right">Copyright &copy; <span id="year">2024</span> Astro Drive Corporation.</p>
         <p class="text-right">
           All rights reserved.
         </p>
