fix: add favicon link to index.html

--- a/files/index.html
+++ b/files/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
   <link rel="stylesheet" href="font.css">
+  <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=WYOsJ002XVK5&format=png&color=000000"
+    type="image/x-icon">
   <script src="js/main.js" defer></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
