fix: update image source path for rocket dab in index.html

--- a/files/index.html
+++ b/files/index.html
@@ -55,7 +55,7 @@
         <p class="max-w-md text-2xl mt-4 text-center sm:text-left text-slate-700 dark:text-slate-400">Think Astro Drive.
         </p>
       </article>
-      <img src="/img/rocketdab.png" alt="rocket dab" class="w-1/2">
+      <img src="./files/img/rocketdab.png" alt="rocket dab image" class="w-1/2">
     </section>
 
     <hr class="mx-auto bg-black dark:bg-white w-1/2">
