--- a/files/index.html
+++ b/files/index.html
@@ -66,7 +66,7 @@
       <ul class="list-none mx-auto my-12 flex flex-col sm:flex-row items-center gap-8">
         <li
           class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
-          <img src="/files/img/rocketman.png" alt="rocket man" class="w-1/2 mb-6">
+          <img src="./files/img/rocketman.png" alt="rocket man" class="w-1/2 mb-6">
           <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
             Explorer
           </h3>
@@ -79,7 +79,7 @@
         </li>
         <li
           class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
-          <img src="/files/img/rocketride.png" alt="rocket ride" class="w-1/2 mb-6">
+          <img src="./files/img/rocketride.png" alt="rocket ride" class="w-1/2 mb-6">
           <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
             Adventurer
           </h3>
@@ -92,7 +92,7 @@
         </li>
         <li
           class="w-2/3 sm:w-5/6 flex flex-col items-center border border-solid border-slate-900 dark:border-gray-100 bg-white py-6 px-2 rounded-3xl shadow-xl dark:bg-black">
-          <img src="/files/img/rocketlaunch.png" alt="rocket launch" class="w-1/2 mb-6">
+          <img src="./files/img/rocketlaunch.png" alt="rocket launch" class="w-1/2 mb-6">
           <h3 class="text-3xl text-center-text-slate 900 dark:text-white">
             Infinity
           </h3>
